jvm 恢复